--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
   height: 150px;
@@ -14,15 +9,19 @@
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.card {
+  width: 200px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+img.card-img-top.rounded-circle {
+  width: 100px;
 }
 
 .App-intro {
-  font-size: large;
+  display: inline-flex;
+  margin-top: 50px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
